namespace ConsoleApp.Models;

public interface ICell
{
    
}
