namespace ConsoleApp.Models;

public interface IPlayer
{
    public string Name {get; set;}
}