namespace ConsoleApp.Types;

public enum AttackResult
{
    Hit,
    Miss, 
    Sunk
}