namespace ConsoleApp.Types;

public enum ShipType
{
    Destroyer = 2,
    Submarine = 3,
    Cruiser = 3,
    Battleship = 4,
    Carrier = 5
}