namespace ConsoleApp.Types;

public enum VerticalLabel
{
    A,
    B,
    C,
    D,
    E,
    F,
    G,
    H,
    I,
    J
}